# pyproject.toml
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "smart_time_py"
version = "1.1.1"
description = "📅 Conversão inteligente de datas e horas em Python."
authors = [
    { name = "Roberto Lima", email = "robertolima.izphera@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = [
    "pytest>=6.0.0"
]
