# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-time-py"
version = "1.2.0"
authors = [
    { name = "Roberto Lima", email = "robertolima@example.com" },
]
description = "Uma biblioteca avançada para manipulação de datas e tempos em Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["date", "time", "datetime", "timezone", "holiday"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
    "babel>=2.12.1",
]

[project.urls]
Homepage = "https://github.com/robertolima/smart-time-py"
Documentation = "https://smart-time-py.readthedocs.io"
Repository = "https://github.com/robertolima/smart-time-py.git"
Issues = "https://github.com/robertolima/smart-time-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["smart_time_py"]